starting the attempt tto transition from images to css

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
 	                </div>
 	            </div>
 	        </div>
+
+	        <div class="backstretch" style="left: 0px; top: 0px; overflow: hidden; margin: 0px; padding: 0px; height: 334px; width: 1280px; z-index: -999998; position: absolute; background-color: #25A3D5;">
+	    	</div>
         </div>
         
         <!-- Features -->
