--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 		
         <!-- Top content -->
         <div class="top-content">
+        	<a href="#">
+        		<img src="assets/img/FaqButton.jpg" alt="frequently asked questions">
+        	</a> 
             <div class="inner-bg">
                 <div class="container">
                     <div class="row">
