whoops, forgot the id

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Top content -->
         <div class="top-content">
         	<a href="#">
-        		<img src="assets/img/FaqButton.jpg" alt="frequently asked questions">
+        		<img id="faqbutton" src="assets/img/FaqButton.jpg" alt="frequently asked questions">
         	</a> 
             <div class="inner-bg">
                 <div class="container">
