white text for some blocks

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div id="shop" class="single-feature-container section-container" style="background-color: #9D9D9D">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 single-feature section-description wow fadeIn">
+	                <div class="col-sm-12 single-feature section-description wow fadeIn whitetxt">
 	                    <h2>Shop More</h2>
 	                    <p><strong>
 	                    	No need to search your inbox for information regarding your purchases. <br> We've got it all right here with Linc's Shopline.</p>
@@ -578,7 +578,7 @@
         <div id='email' class="subscribe-container section-container" style="background-color: #9D9D9D;">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 subscribe section-description wow fadeIn">
+	                <div class="col-sm-12 subscribe section-description wow fadeIn whitetxt">
 	                    <h2>Stay Informed</h2>
 	                    <p> <strong> Sign up now and you'll be among the first to know about new features and releases.</strong> </p>
 	                    <form class="form-inline" action="assets/subscribe.php" method="post">
