still changing text colors to white

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         <div id="shop" class="single-feature-container section-container" style="background-color: #9D9D9D">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 single-feature section-description wow fadeIn whitetxt">
-	                    <h2>Shop More</h2>
-	                    <p><strong>
+	                <div class="col-sm-12 single-feature section-description wow fadeIn">
+	                    <h2 class="whitetxt">Shop More</h2>
+	                    <p class="whitetxt"><strong>
 	                    	No need to search your inbox for information regarding your purchases. <br> We've got it all right here with Linc's Shopline.</p>
 	                	</strong><p>
 	                </div>
@@ -578,9 +578,9 @@
         <div id='email' class="subscribe-container section-container" style="background-color: #9D9D9D;">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 subscribe section-description wow fadeIn whitetxt">
-	                    <h2>Stay Informed</h2>
-	                    <p> <strong> Sign up now and you'll be among the first to know about new features and releases.</strong> </p>
+	                <div class="col-sm-12 subscribe section-description wow fadeIn">
+	                    <h2 class="whitetxt">Stay Informed</h2>
+	                    <p class="whitetxt"> <strong> Sign up now and you'll be among the first to know about new features and releases.</strong> </p>
 	                    <form class="form-inline" action="assets/subscribe.php" method="post">
 	                        <input type="text" name="email" placeholder="Enter your email..." class="subscribe-email">
 	                        <button type="submit" class="btn"> <strong>Let's Linc</strong></button>
