--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 single-feature section-description wow fadeIn">
-	                    <h2 class="whitetxt">Shop More</h2>
+	                    <h2 id="whitetxt1">Shop More</h2>
 	                    <p class="whitetxt"><strong>
 	                    	No need to search your inbox for information regarding your purchases. <br> We've got it all right here with Linc's Shopline.</p>
 	                	</strong><p>
@@ -579,7 +579,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 subscribe section-description wow fadeIn">
-	                    <h2 class="whitetxt">Stay Informed</h2>
+	                    <h2 id="whitetxt2">Stay Informed</h2>
 	                    <p class="whitetxt"> <strong> Sign up now and you'll be among the first to know about new features and releases.</strong> </p>
 	                    <form class="form-inline" action="assets/subscribe.php" method="post">
 	                        <input type="text" name="email" placeholder="Enter your email..." class="subscribe-email">
