--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		
         <!-- Top content -->
         <div class="top-content">
-        	<a href="#">
+        	<a href="/faqpage.html/">
         		<img id="faqbutton" src="assets/img/FaqButton.jpg" alt="frequently asked questions">
         	</a> 
             <div class="inner-bg">
