--- a/faqpage.html
+++ b/faqpage.html
@@ -244,4 +244,35 @@
             </div>
         </div>
         <!-- FAQ -->
+
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-7 footer-copyright">
+                        &copy; Linc Global
+                    </div>
+                    <div class="col-sm-5 footer-social">
+                        <a class="ultm ultm-facebook ultm-32 ultm-square ultm-color-to-gray" href=""></a>
+                        <a class="ultm ultm-linkedin ultm-32 ultm-square ultm-color-to-gray" href=""></a>
+                        <a class="ultm ultm-twitter ultm-32 ultm-square ultm-color-to-gray" href=""></a>
+                        <a class="ultm ultm-google-plus-1 ultm-32 ultm-square ultm-color-to-gray" href=""></a>
+                        </div>
+                </div>
+            </div>
+        </footer>
+        
+
+        <!-- Javascript -->
+        <script src="assets/js/jquery-1.10.2.min.js"></script>
+        <script src="assets/js/jquery.backstretch.min.js"></script>
+        <script src="assets/js/wow.min.js"></script>
+        <script src="assets/js/retina-1.1.0.min.js"></script>
+        <script src="assets/js/scripts.js"></script>
+        
+        <!--[if lt IE 10]>
+            <script src="assets/js/placeholder.js"></script>
+        <![endif]-->
+
     </body>
+</html>
