changed backarrow to png

--- a/faqpage.html
+++ b/faqpage.html
@@ -42,7 +42,7 @@
         <!-- FAQ -->
         <div class="faq-container section-container">
             <a href="/">
-                <img class="faqbutton" src="assets/img/BackArrow.jpg" alt="return to home">
+                <img class="faqbutton" src="assets/img/BackArrow.png" alt="return to home">
             </a> 
             <div class="container">
                 <div class="row">
