testing without redbg caution for mobile

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         	 <img alt="" class="img-responsive" src="assets/img/linclogoappsite.png">
                         	</div>
                             <h1>Shopping Assist, Messenger & Therapist</h1>
-                           <h3 id="redbg"><strong>CAUTION: THIS APP MAY REDUCE STRESS</strong></h3>
+                           <h3><strong>CAUTION: THIS APP MAY REDUCE STRESS</strong></h3>
 							<div class="description">
                             	
                             </div>
